--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,2 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+
+@theme {
+  --color-black: #2c2c2e;
+  --color-white: #fff;
+  --color-gray: #5c5c61;
+  --color-light-gray: #e5e7eb;
+  --color-red: #ff3b30;
+}
